# certification

./: .gitignore  .~lock.Détail critères.ods#  Détail critères.ods  musicbrainz.org.json  pyproject.toml  requirements.txt
Avant-projet/: .~lock.présentation certif.odp#  présentation certif.odp  référentiel écoresponsable.odt
E1/: E1.odt  GU01.odt  GU04.odt  GU05.odt  grille utilisateur.odt
E1/grilles/: GD01.odt  GU02.odt  GU03.odt  grille utilisateur.odt
E2/: E2.odt
E3/: E3.odt
E4/: RGPD_fake.ods  clean_scrapy.py  schema.md
E4/harmonie/: scrapy.cfg
E4/harmonie/BDD/: .env  api_externe.py  api_hbm.py  app_streamlit.py  auth.py  config.py  create_db.py  crud.py  crud_mongo.py  database.py  hbm.db  models.py  musicshop.db  musicshop_last.csv  schemas.py
E4/harmonie/BDD_brute/: .env  Hello.py  api_externe.py  api_hbm.py  app.py  config.py  create_db.py  crud.py  database.py  models.py  musicshop.db  schemas.py  script_bdd.sh
E4/harmonie/harmonie/: 100-200.csv  brouillon.py  clean.py  clean_csv.py  clean_scrapy.py  essai.csv  essai1.csv  essai2.csv  essai3.csv  fichier_base_test.csv  items.py  middlewares.py  musicshop0100.csv  musicshop0200.csv  musicshop0300.csv  musicshop0400.csv  musicshop0500.csv  musicshop0600.csv  musicshop0700.csv  musicshop0800.csv  musicshop0900.csv  musicshop1000.csv  musicshop1100.csv  musicshop1200.csv  (+8 more)
E7/: .terraform.lock.hcl  export_scrapy.py  main.tf  provider.tf  test.py  variables.tf
docs/: E1.md  E2.md  E3.md  E4.md  E5.md  E6.md  E7.md  certification copy.md  index.md  structure_du_projet.md
sources/: users.csv
(+26 files in other folders)
