[tool.poetry]
name = "certification"
version = "0.1.0"
description = ""
authors = ["Stéphanie Parcollet <st.parcollet@orange.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.12.0"
scrapy-splash = "^0.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
