[tool.poetry]
name = "certification"
version = "0.1.0"
description = ""
authors = ["Stéphanie Parcollet <st.parcollet@orange.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.12.0"
dateparser = "^1.2.1"
pandas = "^2.2.3"
azure-storage-file-datalake = "^12.20.0"
sqlalchemy = "^2.0.40"
dotenv = "^0.9.9"
streamlit = "^1.44.1"
pydantic = "^2.11.3"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
